--- a/userprofile_app/templates/userprofile_app/users/user_list.html
+++ b/userprofile_app/templates/userprofile_app/users/user_list.html
@@ -39,12 +39,15 @@
                     </div>
                 </div>
 
-                <a href="{% url 'userprofile_app:user_create' %}" class="btn btn-info d-inline-flex align-items-center new-article-btn"
+                <a href="{% url 'userprofile_app:user_create' %}"
+                   class="btn btn-info d-inline-flex align-items-center new-article-btn"
                    style="background-color: #e3f2fd; color: #1976d2; border-color: #b3e5fc; font-weight: bold;">
                     <i class="la la-plus mr-2"></i><span style="font-weight: bold;">ایجاد کاربر جدید</span>
                 </a>
 
             </div>
+
+
 
             <!-- user section -->
             <div class="section-block mb-5"></div>
