--- a/userprofile_app/templates/userprofile_app/articles/articles_list.html
+++ b/userprofile_app/templates/userprofile_app/articles/articles_list.html
@@ -172,72 +172,75 @@
                                         <i class="la la-edit"></i>
                                     </a>
 
-                                    <!-- delete -->
-                                    <a href="javascript:void(0)" data-toggle="modal"
-                                       data-target="#deleteModal-{{ article.id }}"
-                                       class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-danger"
-                                       data-toggle="tooltip" title="حذف">
-                                        <i class="la la-trash"></i>
-                                    </a>
+                                    <!-- delete modal -->
+                                    {% if is_editor_or_manager %}
+                                        <a href="javascript:void(0)" data-toggle="modal"
+                                           data-target="#deleteModal-{{ article.id }}"
+                                           class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-danger"
+                                           data-toggle="tooltip" title="حذف">
+                                            <i class="la la-trash"></i>
+                                        </a>
+                                        <div class="modal fade modal-container" id="deleteModal-{{ article.id }}"
+                                             tabindex="-1" role="dialog"
+                                             aria-labelledby="deleteModalTitle-{{ article.id }}"
+                                             aria-hidden="true">
+                                            <div class="modal-dialog modal-dialog-centered" role="document">
+                                                <div class="modal-content">
+                                                    <div class="modal-body text-center">
+                                                        <span class="la la-exclamation-circle fs-60 text-warning"></span>
+                                                        <h4 class="modal-title fs-19 font-weight-semi-bold pt-2 pb-1"
+                                                            id="deleteModalTitle-{{ article.id }}">مقاله شما حذف خواهد شد!
+                                                        </h4>
+                                                        <p>آیا مطمئن هستید که می خواهید مقاله خود را حذف کنید؟</p>
+                                                        <div class="btn-box pt-4">
 
-                                    <!-- modal: delete -->
-                                    <div class="modal fade modal-container" id="deleteModal-{{ article.id }}"
-                                         tabindex="-1" role="dialog"
-                                         aria-labelledby="deleteModalTitle-{{ article.id }}"
-                                         aria-hidden="true">
-                                        <div class="modal-dialog modal-dialog-centered" role="document">
-                                            <div class="modal-content">
-                                                <div class="modal-body text-center">
-                                                    <span class="la la-exclamation-circle fs-60 text-warning"></span>
-                                                    <h4 class="modal-title fs-19 font-weight-semi-bold pt-2 pb-1"
-                                                        id="deleteModalTitle-{{ article.id }}">مقاله شما حذف خواهد شد!
-                                                    </h4>
-                                                    <p>آیا مطمئن هستید که می خواهید مقاله خود را حذف کنید؟</p>
-                                                    <div class="btn-box pt-4">
-
-                                                        <form
-                                                                action="{% url 'userprofile_app:article_delete' pk=article.id %}"
-                                                                method="post">
-                                                            {% csrf_token %}
-                                                            <button type="button" class="btn font-weight-medium mr-3"
-                                                                    data-dismiss="modal">لغو
-                                                            </button>
-                                                            <input type="hidden" name="id" value="{{ article.id }}">
-                                                            <button type="submit"
-                                                                    class="btn theme-btn theme-btn-sm lh-30">
-                                                                حذف
-                                                            </button>
-                                                        </form>
+                                                            <form
+                                                                    action="{% url 'userprofile_app:article_delete' pk=article.id %}"
+                                                                    method="post">
+                                                                {% csrf_token %}
+                                                                <button type="button" class="btn font-weight-medium mr-3"
+                                                                        data-dismiss="modal">لغو
+                                                                </button>
+                                                                <input type="hidden" name="id" value="{{ article.id }}">
+                                                                <button type="submit"
+                                                                        class="btn theme-btn theme-btn-sm lh-30">
+                                                                    حذف
+                                                                </button>
+                                                            </form>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    {% endif %}
+
                                     <form action="{% url 'userprofile_app:article_change_status' article.pk %}"
                                           method="post" style="display:inline;">
                                         {% csrf_token %}
-                                        {% if article.status == 'draft' and article.author == request.user %}
+
+                                        {% if article.status == 'draft' and article.author == request.user or article.status == 'draft' and request.user.is_superuser or article.status == 'draft' and is_editor_or_manager %}
                                             <button type="submit" name="action" value="submit_for_review"
                                                     class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-primary border-0"
                                                     data-toggle="tooltip" title="ارسال برای بررسی">
                                                 <i class="la la-upload"></i>
                                             </button>
                                         {% endif %}
+                                        {% if is_editor_or_manager and article.status == 'pending' %}
+                                            {% if article.status == 'pending' and perms.blog_app.publish_article %}
+                                                <button type="submit" name="action" value="publish"
+                                                        class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-success border-0"
+                                                        data-toggle="tooltip" title="انتشار">
+                                                    <i class="la la-check"></i>
+                                                </button>
+                                            {% endif %}
 
-                                        {% if article.status == 'pending' and perms.blog_app.can_publish_article %}
-                                            <button type="submit" name="action" value="publish"
-                                                    class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-success border-0"
-                                                    data-toggle="tooltip" title="انتشار">
-                                                <i class="la la-check"></i>
-                                            </button>
-                                        {% endif %}
-
-                                        {% if article.status == 'pending' and perms.blog_app.can_reject_article %}
-                                            <button type="submit" name="action" value="reject"
-                                                    class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-danger border-0"
-                                                    data-toggle="tooltip" title="رد کردن">
-                                                <i class="la la-times"></i>
-                                            </button>
+                                            {% if article.status == 'pending' and perms.blog_app.reject_article %}
+                                                <button type="submit" name="action" value="reject"
+                                                        class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-danger border-0"
+                                                        data-toggle="tooltip" title="رد کردن">
+                                                    <i class="la la-times"></i>
+                                                </button>
+                                            {% endif %}
                                         {% endif %}
                                     </form>
 
