--- a/userprofile_app/templates/userprofile_app/lectures/lectures_list.html
+++ b/userprofile_app/templates/userprofile_app/lectures/lectures_list.html
@@ -53,7 +53,6 @@
             <!-- article section -->
             <div class="section-block mb-5"></div>
             <div class="dashboard-heading mb-5">
-
                 <!-- articles count -->
                 <h3 class="fs-22 font-weight-semi-bold">
                     لیست سخنرانی ها
@@ -62,8 +61,19 @@
                 </h3>
             </div>
 
+            {% if messages %}
+                <div class="mb-3">
+                    {% for message in messages %}
+                        <div class="alert alert-{{ message.tags }}">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                </div>
+            {% endif %}
+
             <!-- article table -->
             <div class="table-responsive pb-4">
+
                 <table class="table generic-table align-middle">
                     <thead>
                     <tr>
@@ -157,49 +167,51 @@
                                         <i class="la la-edit"></i>
                                     </a>
 
-                                    <!-- delete -->
-                                    <a href="javascript:void(0)" data-toggle="modal" data-target="#deleteModal-{{ lecture.id }}"
-                                       class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-danger"
-                                       data-toggle="tooltip" title="حذف">
-                                        <i class="la la-trash"></i>
-                                    </a>
+                                    <!-- delete modal -->
+                                    {% if is_editor_or_manager %}
+                                        <a href="javascript:void(0)" data-toggle="modal" data-target="#deleteModal-{{ lecture.id }}"
+                                           class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-danger"
+                                           data-toggle="tooltip" title="حذف">
+                                            <i class="la la-trash"></i>
+                                        </a>
+                                        <div class="modal fade modal-container" id="deleteModal-{{ lecture.id }}" tabindex="-1" role="dialog"
+                                             aria-labelledby="deleteModalTitle-{{ lecture.id }}"
+                                             aria-hidden="true">
+                                            <div class="modal-dialog modal-dialog-centered" role="document">
+                                                <div class="modal-content">
+                                                    <div class="modal-body text-center">
+                                                        <span class="la la-exclamation-circle fs-60 text-warning"></span>
+                                                        <h4 class="modal-title fs-19 font-weight-semi-bold pt-2 pb-1"
+                                                            id="deleteModalTitle-{{ lecture.id }}">مقاله شما حذف خواهد شد!
+                                                        </h4>
+                                                        <p>آیا مطمئن هستید که می خواهید این سخنرانی را حذف کنید؟</p>
+                                                        <div class="btn-box pt-4">
 
-                                    <!-- modal: delete -->
-                                    <div class="modal fade modal-container" id="deleteModal-{{ lecture.id }}" tabindex="-1" role="dialog"
-                                         aria-labelledby="deleteModalTitle-{{ lecture.id }}"
-                                         aria-hidden="true">
-                                        <div class="modal-dialog modal-dialog-centered" role="document">
-                                            <div class="modal-content">
-                                                <div class="modal-body text-center">
-                                                    <span class="la la-exclamation-circle fs-60 text-warning"></span>
-                                                    <h4 class="modal-title fs-19 font-weight-semi-bold pt-2 pb-1"
-                                                        id="deleteModalTitle-{{ lecture.id }}">مقاله شما حذف خواهد شد!
-                                                    </h4>
-                                                    <p>آیا مطمئن هستید که می خواهید این سخنرانی را حذف کنید؟</p>
-                                                    <div class="btn-box pt-4">
-
-                                                        <form
-                                                                action="{% url 'userprofile_app:lecture_delete' pk=lecture.id %}"
-                                                                method="post">
-                                                            {% csrf_token %}
-                                                            <button type="button" class="btn font-weight-medium mr-3"
-                                                                    data-dismiss="modal">لغو
-                                                            </button>
-                                                            <input type="hidden" name="id" value="{{ lecture.id }}">
-                                                            <button type="submit"
-                                                                    class="btn theme-btn theme-btn-sm lh-30">
-                                                                حذف
-                                                            </button>
-                                                        </form>
+                                                            <form
+                                                                    action="{% url 'userprofile_app:lecture_delete' pk=lecture.id %}"
+                                                                    method="post">
+                                                                {% csrf_token %}
+                                                                <button type="button" class="btn font-weight-medium mr-3"
+                                                                        data-dismiss="modal">لغو
+                                                                </button>
+                                                                <input type="hidden" name="id" value="{{ lecture.id }}">
+                                                                <button type="submit"
+                                                                        class="btn theme-btn theme-btn-sm lh-30">
+                                                                    حذف
+                                                                </button>
+                                                            </form>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    {% endif %}
+
                                     <form action="{% url 'userprofile_app:lecture_change_status' lecture.pk %}"
                                           method="post" style="display:inline;">
                                         {% csrf_token %}
-                                        {% if lecture.status == 'draft' and lecture.author == request.user %}
+
+                                        {% if lecture.status == 'draft' and lecture.author == request.user or lecture.status == 'draft' and request.user.is_superuser or lecture.status == 'draft' and is_editor_or_manager %}
                                             <button type="submit" name="action" value="submit_for_review"
                                                     class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-primary border-0"
                                                     data-toggle="tooltip" title="ارسال برای بررسی">
@@ -207,20 +219,22 @@
                                             </button>
                                         {% endif %}
 
-                                        {% if lecture.status == 'pending' and perms.blog_app.can_publish_article %}
-                                            <button type="submit" name="action" value="publish"
-                                                    class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-success border-0"
-                                                    data-toggle="tooltip" title="انتشار">
-                                                <i class="la la-check"></i>
-                                            </button>
-                                        {% endif %}
+                                        {% if is_editor_or_manager and lecture.status == 'pending' %}
+                                            {% if lecture.status == 'pending' and perms.blog_app.publish_lecture %}
+                                                <button type="submit" name="action" value="publish"
+                                                        class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-success border-0"
+                                                        data-toggle="tooltip" title="انتشار">
+                                                    <i class="la la-check"></i>
+                                                </button>
+                                            {% endif %}
 
-                                        {% if lecture.status == 'pending' and perms.blog_app.can_reject_article %}
-                                            <button type="submit" name="action" value="reject"
-                                                    class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-danger border-0"
-                                                    data-toggle="tooltip" title="رد کردن">
-                                                <i class="la la-times"></i>
-                                            </button>
+                                            {% if article.status == 'pending' and perms.blog_app.reject_lecture %}
+                                                <button type="submit" name="action" value="reject"
+                                                        class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-danger border-0"
+                                                        data-toggle="tooltip" title="رد کردن">
+                                                    <i class="la la-times"></i>
+                                                </button>
+                                            {% endif %}
                                         {% endif %}
                                     </form>
 
